--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "src",
-	"version": "1.0.0",
+	"name": "phaser-edit",
+	"version": "0.0.1",
 	"description": "",
 	"main": "electron/main.js",
 	"scripts": {
@@ -8,7 +8,7 @@
 	},
 	"keywords": [],
 	"author": "",
-	"license": "ISC",
+	"license": "MIT",
 	"devDependencies": {
 		"electron": "^26.2.2"
 	}
